Added check of Lemma 4.21

--- a/Summation identities.ipynb
+++ b/Summation identities.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1f0750d2",
+   "metadata": {},
+   "source": [
+    "# Lemma 3.26"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "6e8a287d",
@@ -19,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "a4ac1d76",
    "metadata": {},
    "outputs": [],
@@ -119,6 +127,96 @@
     "if not counterexample_found:\n",
     "    print(\"No counterexamples found\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5c07e37",
+   "metadata": {},
+   "source": [
+    "# Lemma 4.21"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "29c40cf9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def D4_count(q, m, eF):\n",
+    "    if m % 4 == 0 and 4 <= m <= 4*eF:\n",
+    "        return (q-1) * ((q+1) * q**(m/2 - 2) - q**(m/4 - 1))\n",
+    "    elif m == 4*eF + 2:\n",
+    "        return q**eF * (q**eF - 1)\n",
+    "    else:\n",
+    "        return 0\n",
+    "    \n",
+    "def mass_from_counts(q, eF):\n",
+    "    tot = 0\n",
+    "    for m in range(4*eF + 5):\n",
+    "        tot += (1/2) * q**(-m) * D4_count(q, m, eF)\n",
+    "    return tot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "aaa56be6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mass_formula(q, eF):\n",
+    "    return (1/2) * (q**(-2) - q**(-2*eF - 2) - \n",
+    "            (1/(q**2 + q + 1)) * (q**(-1) - q**(-3*eF - 1)) + q**(-3*eF - 2)*(q**eF - 1)\n",
+    "            )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "73073afd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for q in [2, 4, 8, 16]:\n",
+    "    for eF in [1,2,3,4,5]:\n",
+    "        print(mass_from_counts(q, eF) - mass_formula(q, eF))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "735e915c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
